{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 13,
  "lineage": "191e2499-1b4b-78ca-9dc8-0a56c00c64ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:internet-gateway/igw-0b1156d06c43111bd",
            "id": "igw-0b1156d06c43111bd",
            "owner_id": "975050217683",
            "tags": {
              "Name": "vpc-projeto3-ECS-internet-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-ECS-internet-gateway",
              "Project": "Projeto-3-ECS"
            },
            "vpc_id": "vpc-02eb7bf8e3d712945"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:route-table/rtb-098d1f57bdf3658f3",
            "id": "rtb-098d1f57bdf3658f3",
            "owner_id": "975050217683",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-projeto3-ECS-private-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-ECS-private-route-table",
              "Project": "Projeto-3-ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb7bf8e3d712945"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:route-table/rtb-0f350735e76054f98",
            "id": "rtb-0f350735e76054f98",
            "owner_id": "975050217683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1156d06c43111bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-projeto3-ECS-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-ECS-public-route-table",
              "Project": "Projeto-3-ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb7bf8e3d712945"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021ac3da66091d183",
            "route_table_id": "rtb-098d1f57bdf3658f3",
            "subnet_id": "subnet-0ed8de83446d29f65"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c2c7ac5e8ebba40",
            "route_table_id": "rtb-098d1f57bdf3658f3",
            "subnet_id": "subnet-07bfaaaa48d89c6be"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0666e9170f36a98ca",
            "route_table_id": "rtb-0f350735e76054f98",
            "subnet_id": "subnet-00e0232ff0ddf014b"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c61b64fd49a808a",
            "route_table_id": "rtb-0f350735e76054f98",
            "subnet_id": "subnet-07ddd872b3606df16"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:subnet/subnet-0ed8de83446d29f65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed8de83446d29f65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050217683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-projeto3-ECS-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-ECS-private-subnet-us-east-1a",
              "Project": "Projeto-3-ECS"
            },
            "vpc_id": "vpc-02eb7bf8e3d712945"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:subnet/subnet-07bfaaaa48d89c6be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bfaaaa48d89c6be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050217683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-projeto3-ECS-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-ECS-private-subnet-us-east-1b",
              "Project": "Projeto-3-ECS"
            },
            "vpc_id": "vpc-02eb7bf8e3d712945"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:subnet/subnet-00e0232ff0ddf014b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e0232ff0ddf014b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050217683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-projeto3-ECS-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-ECS-public-subnet-us-east-1a",
              "Project": "Projeto-3-ECS"
            },
            "vpc_id": "vpc-02eb7bf8e3d712945"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:subnet/subnet-07ddd872b3606df16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ddd872b3606df16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050217683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-projeto3-ECS-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-ECS-public-subnet-us-east-1b",
              "Project": "Projeto-3-ECS"
            },
            "vpc_id": "vpc-02eb7bf8e3d712945"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:vpc/vpc-02eb7bf8e3d712945",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-066cbb37dd9e3bb0e",
            "default_route_table_id": "rtb-047fbabe7bbf7d3cc",
            "default_security_group_id": "sg-0f546426e92082d26",
            "dhcp_options_id": "dopt-03bd2391cf760f708",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02eb7bf8e3d712945",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047fbabe7bbf7d3cc",
            "owner_id": "975050217683",
            "tags": {
              "Name": "vpc-projeto3-ECS"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-ECS",
              "Project": "Projeto-3-ECS"
            }
          }
        }
      ]
    }
  ]
}